--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -13,7 +13,7 @@ end %>
 
 <p><%= product.description %><br>
 <%= product.color %><br>
-<%= product.price * 0.01 %> &euro;<br></p>
+<%= product.price %><br></p>
 <%= link_to 'Show', product, class:'btn btn-default'%>
 <p><% if signed_in? && current_user.admin? %>
 <%= link_to 'Edit', edit_product_path(product) %>
