--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -1,37 +1,31 @@
 
-<p><h1>BIKE NYC</h1>
-<h2>Your source for fixie bikes in NYC</h2><P>
+<table>
+  <%#thead>
+    <tr>
+      <th>Name</th>
+      <th>Description</th>
+      <th>Image url</th>
+      <th>Colour</th>
+      <th>Price</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead%>
+ <div class="pad-top color-bg">
+	<h1>Welcome to Bike NYC/h1>
+</div>
+
+<div class="pad-top color-bg">
+	<h3>Your source for fixed gear bikes</h3>
+</div>
+<div class="pad-bottom color-bg">
+
+<%= image_tag("Bike1.png", class: "img-responsive my-image") %>
+</div>
+
+<!-- Wrapper for slides -->
+
+<%= render partial: 'carousel' %>
 
 
-<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-	  <!-- Indicators -->
-	  <ol class="carousel-indicators">
-	    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-	    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-	    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-	  </ol>
-
-	  <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-      <% @products.each do |product| %>
-      <div class="item<%= " active" if product == @products.first %>">
-        <div class="carousel-caption">
-          <%= link_to product.name, product %>
-        </div>
-        <%= image_tag(product.image_url) %>
-      </div>
-      <% end %>
-    </div>
-
-	  <!-- Controls -->
-	  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-	    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-	    <span class="sr-only">Previous</span>
-	  </a>
-	  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-	    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-	    <span class="sr-only">Next</span>
-	  </a>
-	</div>
-
+</table>
 	
