--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -32,13 +32,13 @@ body {
     margin-right: auto;
 }
 
-.btn-colour-change {
+.btn-color-change {
     color: #fff;
     background-color: #6C464F;
     border-color: #B3CDD1;
 }
 
-.btn-colour-change:hover {
+.btn-color-change:hover {
     color: #fff;
     background-color: #9E768F;
     border-color: #B3CDD1;
