--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -10,6 +10,7 @@
 	    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
 	    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
 	  </ol>
+	  </div>
 
 	  <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
