--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,43 +1,57 @@
 <p id="notice"><%= notice %></p>
 
-<p><strong>Product Overview:</strong>
-  <%= @product.name %>
-</p>
+<div class="container pad-top pad-bottom" >
+  <% cache @product do %>
+    <h2 class="text-center"><%= @product.name %>
+    </h2>
+    <% end %>
+  <div class="row margin-sides" data-product-id="<%= @product.id %>">
 
- <%= image_tag(@product.image_url, class: "img-responsive img-zoom", data_zoom_image: @product.image_url") %>
+    <div class="col-lg-6 col-md-12 col-sm-12 pad-top">
+    <div class='inner-item img-responsive img-fluid'>
+      <div class="image img-zoom">
+        <%= image_tag(@product.image_url, class: "img-responsive img_zoom", data_zoom_image: @product.image_url) if @product.image_url %>
 
-
-<p><strong>Description:</strong>
-  <%= @product.description %>
-</p>
-
-<p><strong>Image url:</strong>
-  <%= @product.image_url %>
-</p>
-
-<p>Average Rating: <div class="rated" data-score="<%= @product.average_rating %>"></div>
-  <p class="">
-  <% if signed_in? && current_user.admin? %>
-  <%= link_to 'Edit', edit_product_path(@product) %>
-  <% end %>
-  <%= link_to 'Back', products_path, class:'btn btn-default'%>
-  </p>
+        </div>
 
 
+          </div>
+        </div>
+          <div class="col-lg-6 col-md-12 col-sm-12 pad-top">
+            <h3 class=""><strong>Description: </strong><%= @product.description %>
+            </h3>
+          
+            <h3 name="price_in_cents" class="">
 
-<div class="col-lg-12 col-md-12 col-sm-12 pad-bottom pad-top">
-  <%= render 'new_comment', product: @product %>
-  </div>
-<div class="pagination">
-<div class="alert alert-info" style="display:none" role="alert">A new comment was posted!</div>
-  <%= render 'comments', product: @product %>
-  <%= will_paginate @comments, :page_links => false %>
-  </div>
-
-<%= form_tag "/payments/create" do %>
-  <%= render partial: "shared/stripe_checkout_button" %>
-<% end %>
+              <strong>Price: </strong>
+            </h3>
+            <p>
 
 
-<%= link_to 'Edit', edit_product_path(@product) %> |
-<%= link_to 'Back', products_path %>
+            <% if user_signed_in? %>
+          <%= form_tag "/payments/create" do %>
+            <%= render partial: "shared/stripe_checkout_button" %>
+          <% end %>
+        <% end %>
+
+            </p>
+            <p>Average Rating: <div class="rated" id=average-rating data-score="<%= @product.average_rating %>"></div> </p>
+            <p class="">
+            <% if signed_in? && current_user.admin? %>
+           <%= link_to 'Edit', edit_product_path(@product) %>
+            <% end %>
+            <%= link_to 'Back', products_path, class:'btn btn-default'%>
+            </p>
+
+          </div>
+          <div class="col-lg-12 col-md-12 col-sm-12 pad-bottom pad-top">
+              <%= render 'new_comment', product: @product %>
+          </div>
+          <div class="pagination">
+              <div class="alert alert-info" style="display:none" role="alert">A new comment was posted!</div>
+              <%= render 'comments', product: @product %>
+              <%= will_paginate @comments, :page_links => false %>
+          </div>
+
+      </div>
+</div>
