--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,73 +1,86 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bike NYC</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <%= csrf_meta_tags %>
-  </head>
+  <title>Bike NYC</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <%= csrf_meta_tags %>
+</head>
 
-    <body>
-
-  <!--  start of navigation bar-->
-
-    <nav class="navbar navbar-inverse navbar-fixed-top" roles="navigation">
-      <div class="container-fluid" id="nav_container">
-      <div class="navbar-brand">
-      <%= link_to "Bike NYC", root_path, :class => "navbar-brand" %>
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-      <span class="sr-only">Toggle navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      </button>
+<body>
+  <!-- start navbar -->
+  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="sr-only">Toggle navigation
+          </span>
+          <span class="icon-bar">
+          </span>
+          <span class="icon-bar">
+          </span>
+          <span class="icon-bar">
+          </span>
+        </button>
+        <div class="main-title navbar-brand">
+          <%= link_to "Bike NYC", root_path %>
+        </div>
       </div>
-      </div>
-
-
+      <!-- end navbar-header -->
       <div class="navbar-collapse collapse">
-      <ul class="nav navbar-nav navbar-right">
-      <%= form_tag("/products", method: "get", class:"navbar-form navbar-left", role:"search") do %>
-      <%= content_tag(:div, nil, class: "form-group") do %>
-      <%= text_field_tag(:q, "", class:"form-control", placeholder:"Search Products", id:"search_field") %>
-      <%= submit_tag("Go", class:"btn btn-default") %>
-      <% end %>
-      <% end %>
-      <li><%= link_to "Products", products_path %></li>
-      <li><%= link_to "About", static_pages_about_path %></li>
-      <li><%= link_to "Contact", static_pages_contact_path %></li>
-      
-      <li>
-      <% if user_signed_in? %>
-      <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
-      <% else %>
-      <%= link_to('Login', new_user_session_path) %>
-      <% end %>
-      </li>
+        <ul class="nav navbar-nav navbar-right">
+          <li class="">
+            <%= link_to "Products", products_path %>
+          </li>
+          <li class="">
+            <%= link_to "About", static_pages_about_path %>
+          </li>
+          <li class="">
+            <%= link_to "Contact", static_pages_contact_path %>
+          </li>
+          <li>
+            <% if user_signed_in? %>
+            <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
+            <% else %>
+            <%= link_to('Login', new_user_session_path) %>
+            <% end %>
+          </li>
+        </ul>
+      </div>
 
-      <% if notice %>
-      <p id="notice" class="notice alert alert-info"><%= notice %></p>
-      <% end %>
+    <div class="navbar-collapse collapse">
+        <ul class="nav navbar-nav navbar-right">
+          <li class="">
+          <%= form_tag("/products", method: "get") do %>
+          <%= text_field_tag(:q) %>
+          <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+          <% end %>
+          </li>
+        </ul>
+      </div>
+    </div>
+      <!-- end navbar container -->
+</nav>
+  <!-- end navbar -->
+  <!-- flash notice -->
+  <% if notice %>
+    <p id="notice" class="notice alert alert-info"><%= notice %></p>
+  <% end %>
 
-      <% if alert %>
-      <p id="alert" class="alert alert-info"><%= alert %></p>
-      <% end %>
+  <% if alert %>
+    <p id="alert" class="alert alert-info"><%= alert %></p>
+  <% end %>
 
-      </ul>
-      </nav><!-- end of nav-->
-      </div><!--end collapse navbar-->
-     </div><!-- end container fluid -->
-   </nav>
-
+    <!-- flash notice -->
     <%= yield %>
-
-  <footer class="footer">
+    <footer class="footer">
       <div>
         <p class="text-muted">&copy; 2017 Bike NYC</p>
       </div>
     </footer>
+
   </body>
 </html>
