--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -13,6 +13,13 @@ body {
     background-position: 50% 50%;
     background-repeat:   no-repeat;
     background-size:     cover;
+    display: block;
+
+.img {
+display: block;
+margin: auto;
+}
+
 }
 
 .product-details-box{
