--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,10 +1,16 @@
-<p id="notice"><%= notice %></p>
-<div class="row">
+
+<% if signed_in? && current_user.admin? %>
+  <div class="create-product">
+    <%= link_to 'Create New Product', new_product_path %>
+  </div>
+<% end %>
+<header>
   <h1>Bikes</h1>
-  <% cache(cache_key_for_products) do %>
-    <%= render @products %>
+</header>
+<div class="row">
+<% cache(cache_key_for_products) do %>
+  <% @products.each do |product| %>
+    <%= render partial: "product", locals: {product: product} %>
   <% end %>
-  </div><!-- /row -->
-  <br>
-  <span class="btn-create"><%= link_to 'NEW PRODUCT', new_product_path %></span>
-<br>
+<% end %>
+</div>
