--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,35 +1,55 @@
-<p id="notice"><%= notice %></p>
-<div class="container product">
-  <div class="row" data-product-id="<%= @product.id %>">
-    <% cache @product do %>
-    <div class="col-md-6 col-xs-12">
-       <%= image_tag(@product.image_url, class: "img-responsive detail img-zoom", data_zoom_image: "@product.image_url") %>
-    </div>
-  </div>  
-  <div class="product_show col-md-8 col-xs-12">
-    <h2><%= @product.name %></h2>
-    <p><%= @product.description %></p>
-    <p><span class="glyphicon glyphicon-usd"></span>
-      <%= @product.price %>
-    </p>
-  </div>
- <%= form_tag "/payments/create" do %>
-  <%= hidden_field_tag(:product_id, @product.id) %>
-  <%= render partial: "shared/stripe_checkout_button" %>
-<% end %>
-<h6>  
-  Views:
-  <span class="badge">
-    <%= @product.views %>
-  </span>
-</h6>  
-<div class="col-md-4 col-xs-12">
-  <p>Average Rating:<div class="rated" data-score="<%= @product.average_rating %>"></div></p>
-  <%= render "new_comment" %>
-  <%= render "comments" %> 
-  <div class="alert alert-info" style="display:none" role="alert">A new comment was posted!</div>
-  <%= render 'comments' %>
-  <%= will_paginate @comments, :page_links => false %>
-</div>
-<% end %>
+<div class="container pad-top pad-bottom" >
+  <% cache @product do %>
+    <h2 class="text-center"><%= @product.name %>
+    </h2>
+    <% end %>
+  <div class="row margin-sides" data-product-id="<%= @product.id %>">
+
+    <div class="col-lg-6 col-md-12 col-sm-12 pad-top">
+    <div class='inner-item img-responsive img-fluid'>
+      <div class="image img-zoom">
+        <%= image_tag(@product.image_url, class: "img-responsive img_zoom", data_zoom_image: @product.image_url) if @product.image_url %>
+
+        </div>
+
+
+          </div>
+        </div>
+          <div class="col-lg-6 col-md-12 col-sm-12 pad-top">
+            <h3 class=""><strong>Description: </strong><%= @product.description %>
+            </h3>
+            
+            <h3 name="price_in_cents" class="">
+
+              <strong>Price: </strong><%= number_to_currency@product.price * 0.01%> 
+            </h3>
+            <p>
+
+
+            <% if user_signed_in? %>
+          <%= form_tag "/payments/create" do %>
+            <%= render partial: "shared/stripe_checkout_button" %>
+          <% end %>
+        <% end %>
+
+            </p>
+            <p>Average Rating: <div class="rated" id=average-rating data-score="<%= @product.average_rating %>"></div> </p>
+            <p class="">
+            <% if signed_in? && current_user.admin? %>
+           <%= link_to 'Edit', edit_product_path(@product) %>
+            <% end %>
+            <%= link_to 'Back', products_path, class:'btn btn-default'%>
+            </p>
+
+          </div>
+          <div class="col-lg-12 col-md-12 col-sm-12 pad-bottom pad-top">
+              <%= render 'new_comment', product: @product %>
+          </div>
+          <div class="pagination">
+              <div class="alert alert-info" style="display:none" role="alert">A new comment was posted!</div>
+              <%= render 'comments', product: @product %>
+              <%= will_paginate @comments, :page_links => false %>
+          </div>
+
+      </div>
 </div>
