--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -23,6 +23,10 @@
       <%= f.text_field :image_url %>
     </div>
     <div class="field">
+      <%= f.label :color %><br>
+      <%= f.text_field :color %>
+    </div>
+    <div class="field">
       <%= f.label :price %><br>
       <%= f.text_field :price %>
     </div>
