--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -23,6 +23,8 @@
 
               <strong>Price: </strong>
             </h3>
+            <h3><strong>Color: </strong></h3>
+            </div>
             <p>
 
 
