--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,14 +1,19 @@
-
-<% if signed_in? && current_user.admin? %>
-  <div class="create-product">
-    <%= link_to 'Create New Product', new_product_path %>
-  </div>
-<% end %>
-<header>
-  <h1>Bikes</h1>
-</header>
-<div class="row">
-  <% @products.each do |product| %>
-    <%= render partial: "product", locals: {product: product} %>
-  <% end %>
+<div class="pad-top pad-bottom">
+  <h1>Products</h1>
 </div>
+
+<table>
+  <%#thead>
+    <tr>
+      <th>Name</th>
+      <th>Description</th>
+      <th>Image url</th>
+      <th>Colour</th>
+      <th>Price</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead%>
+
+    <%= render partial: 'product' %>
+<% end %>
+</table>
