--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,19 +1,35 @@
-<div class="pad-top pad-bottom">
-  <h1>Products</h1>
-</div>
+<div class="container">
+  <div class="form-inline">
+    <h1 id="shop-heading">Shop</h1>
+    <select id="product-select" class="form-control">
+      <option>Featured</option>
+      <option>Best Sellers</option>
+      <option>Newest</option>
+      <option>Price (Desc)</option>
+      <option>Price (Asc)</option>
+    </select>
+  </div>
+  <p id="notice"><%= notice %></p>
+</div> <!--end container-->
 
-<table>
-  <%#thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Image url</th>
-      <th>Colour</th>
-      <th>Price</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead%>
+<hr>
 
-    <%= render partial: 'product' %>
-<% end %>
-</table>
+<div class="container-fluid" id="product-wrapper">
+  <div class="row">
+    <div class="col-xs-3" id="sidenav">
+      <ul>
+        <% if user_signed_in? && current_user.admin? %>
+        <%= link_to '+ New Product', new_product_path, class:'btn btn-primary' %>
+        <% end %>
+        <% @products.each do |product| %>
+        <li><%= link_to product.name, product %><li>
+        <% end %>
+      </ul>
+    </div>
+    <div class="col-xs-9">
+       <%= render @products %>
+      <% end %>
+    </div>
+  </div> <!-- end row -->
+</div> <!-- end container-fluid -->
+
