--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,12 +1,8 @@
-<% if signed_in? && current_user.admin? %>
-  <div class="create-product">
-    <%= link_to 'Create New Product', new_product_path %>
-  </div>
-<% end %>
-<header>
-  <h1>Shop</h1>
-</header>
-<div class="row">
-    <%= render partial: "product", locals: {product: product} %>
-  <% end %>
+<div class="pad-top pad-bottom">
+  <h1>Products</h1>
 </div>
+
+<table>
+    <%= render partial: 'product' %>
+<% end %>
+</table>
