--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <title>Bike NYC</title>
+  <title>Gearhead Social Club in New York City</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -26,7 +26,7 @@
           </span>
         </button>
         <div class="main-title navbar-brand">
-          <%= link_to "Bike NYC", root_path %>
+          <%= link_to "Gearhead Social Club", root_path %>
         </div>
       </div>
       <!-- end navbar-header -->
