--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -1,6 +1,6 @@
 
-<p><h1>New York City's Premiere Fixed Gear Shop!</h1>
-<h2> Top Seller's </h2>
+<p><h1>New York City's Premiere Fixed Gear Shop!</h1></p>
+<br><h2> Top Seller's </h2></br>
 
 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
 	  <!-- Indicators -->
