--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -23,7 +23,7 @@
       <%= f.text_field :image_url, class: "form-control", placeholder: "image_url" %>
     </div>
     <div class="form-group form field">
-      <%= f.text_field :colour, class: "form-control", placeholder: "color" %>
+      <%= f.text_field :color, class: "form-control", placeholder: "color" %>
     </div>
     <div class="form-group form field">
       <%= f.text_field :price, class: "form-control", placeholder: "price" %>
