--- a/app/views/products/_new_comment.html.erb
+++ b/app/views/products/_new_comment.html.erb
@@ -1,16 +1,20 @@
-<div>
-  <% if signed_in? %>
-    <h2>Add a review:</h2>
-    <%= form_for([@product, @product.comments.build], remote: true) do |f| %>
-      <div class="form-group pad-bottom">
-      <%= f.text_area :body, class: 'form-control', placeholder: 'Enter comment here' %>
-      </div>
-      <div>
-        <div class="rating"></div>
-      </div>
-      <div class="pad-top">
-        <%= f.submit "Submit", class: 'btn btn-default' %>
-      </div>
-    <% end %>
-  <% end %>
-</div>
+<% if signed_in? %>
+  <div class="container">
+    <h4 class="col-xs-12 hide-click-review"><a class="enable-review">Click</a> to write a review!</h4>
+    <div class="review-container">
+      <%= form_for([@product, @product.comments.build], class: "form-group", remote: true) do |f| %>
+        <p>
+          <%= f.label :body, "Review" %><br>
+          <%= f.text_area :body, class: "form-control col-xs-12", rows: 5 %>
+        </p>
+        <p>
+          <div class="rating col-xs-12">
+          </div>
+        </p>  
+        <p>
+          <%= f.submit "Submit", class: "btn btn-primary col-xs-12 col-sm-6" %>
+        </p>
+      <% end %>
+    </div>
+  </div>
+<% end %>
