--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,56 +16,47 @@
     <div class="container-fluid">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-          <span class="sr-only">Toggle navigation
-          </span>
-          <span class="icon-bar">
-          </span>
-          <span class="icon-bar">
-          </span>
-          <span class="icon-bar">
-          </span>
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
         </button>
-        <div class="main-title navbar-brand">
-          <%= link_to "Gearhead Social Club", root_path %>
-        </div>
+      <div class="main-title navbar-brand">
+        <%= link_to "Gearhead Social Club", root_path %>
       </div>
+    </div>
       <!-- end navbar-header -->
-      <div class="navbar-collapse collapse">
-        <ul class="nav navbar-nav navbar-right">
-          <li class="">
-            <%= link_to "Products", products_path %>
-          </li>
-          <li class="">
-            <%= link_to "About", static_pages_about_path %>
-          </li>
-          <li class="">
-            <%= link_to "Contact", static_pages_contact_path %>
-          </li>
-          <li>
-            <% if user_signed_in? %>
-            <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
-            <% else %>
-            <%= link_to('Login', new_user_session_path) %>
-            <% end %>
-          </li>
-        </ul>
-      </div>
+<div class="navbar-collapse collapse">
+  <ul class="nav navbar-nav navbar-right">
+    <li><%= link_to "Products", products_path %></li>
+    <li><%= link_to "About", static_pages_about_path %></li>
+    <li><%= link_to "Contact", static_pages_contact_path %></li>
+  <li>
+    <% if user_signed_in? %>
+      <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
+    <% else %>
+      <%= link_to('Login', new_user_session_path) %>
+    <% end %>
+  </li>
+ </ul>
+</div>
 
-    <div class="navbar-collapse collapse">
-        <ul class="nav navbar-nav navbar-right">
-          <li class="">
-          <%= form_tag("/products", method: "get") do %>
-          <%= text_field_tag(:q) %>
-          <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-          <% end %>
-          </li>
-        </ul>
-      </div>
+<div class="navbar-collapse collapse">
+  <ul class="nav navbar-nav navbar-right">
+    <li class="">
+      <%= form_tag("/products", method: "get") do %>
+      <%= text_field_tag(:q) %>
+        <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+      <% end %>
+    </li>
+  </ul>
+</div>
     </div>
       <!-- end navbar container -->
 </nav>
   <!-- end navbar -->
   <!-- flash notice -->
+<div class='container'>
   <% if notice %>
     <p id="notice" class="notice alert alert-info"><%= notice %></p>
   <% end %>
@@ -74,13 +65,14 @@
     <p id="alert" class="alert alert-info"><%= alert %></p>
   <% end %>
 
-    <!-- flash notice -->
-    <%= yield %>
+  <!-- flash notice -->
+  <%= yield %>
+  </div>
     <footer class="footer">
       <div>
         <p class="text-muted">&copy; 2017 Gearhead Social Club</p>
       </div>
     </footer>
 
-  </body>
+</body>
 </html>
