--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,24 +1,43 @@
-<p><h1>Contact Us</h1><p>
-<h3>Drop us a line...</h3>
+<div class="pad-top">
+  <h1>Contact Us</h1>
+</div>
+
+<section class="contact" id="contact">
+  <div class="container pad-top-double pad-bottom" >
+    <div class="row margin-sides">
+      <div class="col-lg-6 col-md-12 col-sm-12 pad-top">
+        <h3 class="">Get in touch</h3>
+        <p>
+        <span class="glyphicon glyphicon-envelope"></span>
+              theashley.elyse@gmail.com <br><br>
+        <span class="glyphicon glyphicon-phone">
+        </span>
+          323-376-4117<br><br>
+        <span class="glyphicon glyphicon-map-marker"></span>
+          Manhattan, New York
+        </p>
+      </div>
 
 <%= flash[:notice] %>
-
 <%= form_tag("/static_pages/thank_you") do %>
-<div class="row">
-  <div class="col-md-4">
-    <div class="form-group">
-      <%= label_tag :name %>
-      <%= text_field_tag :name, nil, class: "form-control", placeholder: "Enter Name" %>
-    </div>
-    <div class="form-group">
-      <%= label_tag :email, "Email Address" %>
-      <%= text_field_tag :email, nil, class: "form-control", placeholder: "Enter Email" %>
-    </div>
-    <div class="form-group">
-      <%= label_tag :message %>
-      <%= text_area_tag :message, nil, class: "form-control", placeholder: "Enter Message" %>
+
+    <div class="col-lg-6 col-md-12 col-sm-12 pad-top">
+      <h3 class="form-group">Drop us a line</h3> 
+        <form method='post'>
+          <input type='hidden' name='form-name' value='form 1' />
+            <div class="form-group">
+            <%= text_field_tag :name, nil, class: "form-control", placeholder: "Your name *" %> <div class="form-group">
+            <%= text_field_tag :email, nil, class: "form-control", placeholder: "Your email *", required: "true" %>
+            </div>
+      <div class="form-group">
+      <!--<label class="label-font" for="email">Message *</label>-->
+      <%= text_area_tag :message, nil, class: "form-control message-box", placeholder: "Your message *", required:"true" %>
+      </div>
+      <%= submit_tag "Send", class:'btn btn-default' %>
+
+      </form>
+      </div>
+      <% end %>
     </div>
   </div>
-</div>
-<%= submit_tag "Send" %>
-<% end %>
+</section>
