--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,10 +1,11 @@
-<div class="col-xs-12 col-sm-8 product-box">
+<div class="container">
   <p id="notice"><%= notice %></p>
-    <p><strong>Views:</strong><%= @product.views %></p>
-      <% cache @product do %>
-        <p class="product-name">
-          <%= @product.name %>
-        </p>
+  <% cache @product do %>
+  <p><strong>Views:</strong><%= @product.views %></p>
+    <h1>
+      <%= @product.name %>
+    </h1>     
+
 
 <div class="container">
   <p id="notice"><%= notice %></p>
@@ -33,8 +34,10 @@
         <%= render partial: "shared/stripe_checkout_button" %>
         <%= hidden_field_tag(:product_id, @product.id) %>
         <% end %>
-    </div>
+        <%end %>
+  </div>
     <% end %>
+
     
 
   <div class="col-md-8" id="show-product">
@@ -43,14 +46,14 @@
 </div> <!--end row-->
 
 
-<div class="alert alert-info" style="display:none" role="alert">A new comment was posted!</div>
+  <div class="alert alert-info" style="display:none" role="alert">A new comment was posted!</div>
+    <%= render "new_comment" %>
+    <%= render "comments" %>
 
-<%= render "new_comment" %>
-<%= render "comments" %>
-<div class="btn-wrapper">
-
-<%= link_to 'Edit', edit_product_path(@product), class:'btn btn-primary' %> |
-<%= link_to 'Back', products_path, class:'btn btn-primary' %></div>
+  <div class="btn-wrapper">
+    <%= link_to 'Edit', edit_product_path(@product), class:'btn btn-primary' %> |
+    <%= link_to 'Back', products_path, class:'btn btn-primary' %>
+  </div>
 
 </div>
 !--end container-->
