--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,11 +1,10 @@
 <div class="container">
   <p id="notice"><%= notice %></p>
   <% cache @product do %>
-  <p><strong>Views:</strong><%= @product.views %></p>
     <h1>
       <%= @product.name %>
     </h1>     
-
+<p><strong>Views:</strong><%= @product.views %></p>
 
 <div class="container">
   <p id="notice"><%= notice %></p>
@@ -53,7 +52,7 @@
     <%= link_to 'Edit', edit_product_path(@product), class:'btn btn-primary' %> |
     <%= link_to 'Back', products_path, class:'btn btn-primary' %>
   </div>
-  <%end %>
 
+</div>
 </div>
 !--end container-->
